# ue

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Folder.DotSettings  README.md  build.rs  settings.toml  sublime-syntax.nanorc  toml.nanorc
.github/: copilot-instructions.md
HomebrewFormula/: ue.rb
defaults/: help-editor.md  help-file-selector.md  help-find.md  help-open-dialog.md  settings.toml
defaults/syntax/: c.ue-syntax  cpp.ue-syntax  cs.ue-syntax  css.ue-syntax  go.ue-syntax  html.ue-syntax  java.ue-syntax  js.ue-syntax  json.ue-syntax  md.ue-syntax  py.ue-syntax  rs.ue-syntax  sh.ue-syntax  sql.ue-syntax  toml.ue-syntax  ts.ue-syntax  txt.ue-syntax  ue-syntax.ue-syntax  xml.ue-syntax  yaml.ue-syntax  yml.ue-syntax
scripts/: create-homebrew-tap.sh  release.sh  update-formula-sha.sh
src/: coordinates.rs  default_syntax.rs  double_esc.rs  editing.rs  editor_state.rs  env.rs  event_handlers.rs  file_selector.rs  find.rs  help.rs  highlighter.rs  lib.rs  main.rs  markdown_renderer.rs  menu.rs  mouse_handlers.rs  open_dialog.rs  recent.rs  rendering.rs  session.rs  settings.rs  split_pane.rs  syntax.rs  syntax_nanorc.rs  ui.rs  undo.rs
tests/: ansi_wrap_tests.rs  auto_scroll_wrap_tests.rs  cursor_at_wrap_boundary_test.rs  filter_mode_tests.rs  horizontal_scrollbar_tests.rs  integration_tests.rs  syntax_switching_test.rs  untitled_new_file_tests.rs  wrap_scrollbar_tests.rs  wrapped_line_navigation_tests.rs
