[package]
name = "ue"
version = "0.0.1"
edition = "2024"


[[bin]]
name="ue"
path = "src/main.rs"

[dependencies]
crossterm = "0.26"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
arboard = "3.4"
serde_json = "1.0"
regex = "1.10"


[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
