[package]
name = "ue"
version = "0.0.1"
edition = "2024"

[lib]
name = "ue"
path = "src/lib.rs"

[[bin]]
name="ue"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
arboard = "3.4"
serde_json = "1.0"
regex = "1.10"
termimad = "0.30"
unicode-width = "0.1"
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3"
serial_test = "3.0"

[profile.release]
lto = true
codegen-units = 1
